--- a/web/index.html
+++ b/web/index.html
@@ -53,5 +53,24 @@
     const app = initializeApp(firebaseConfig);
   </script> 
   <script src="flutter_bootstrap.js" async></script>
+  <script>
+    window.addEventListener('load', function(ev) {
+      // Adds the flutter initialization JS code
+      {{flutter_js}}
+      {{flutter_build_config}}
+
+      // Download main.dart.js
+      _flutter.loader.load({
+        serviceWorker: {
+          serviceWorkerVersion: "{{flutter_service_worker_version}}",
+        },
+        onEntrypointLoaded: function(engineInitializer) {
+          engineInitializer.initializeEngine().then(function(appRunner) {
+            appRunner.runApp();
+          });
+        }
+      });
+    });
+  </script>
 </body>
 </html>
